# Voxel-Splatting

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: block.fsh  block.vsh  godrays.fsh  godrays_occlusion.fsh  godrays_occlusion.vsh  grass.fsh  grass.vsh  overlay.fsh  overlay.vsh  overlay_text.fsh  shadow_depth.vsh  sky.fsh  sky.vsh  splat.fsh  splat.vsh  sun_flare.fsh  sun_flare.vsh
include/: Application.hpp
include/game/: Block.hpp  Chunk.hpp  ChunkManager.hpp  Player.hpp  Settings.hpp  World.hpp  WorldGen.hpp
include/render/core/: Camera.hpp  GUIRenderer.hpp  GameOverlay.hpp  ViewFrustum.hpp
include/render/gl/: GLChunkRenderer.hpp  GLShader.hpp  GLShadowMap.hpp  GLSplatRenderer.hpp  GLTexture.hpp  GLTextureUtils.hpp  GLWorldRenderer.hpp
include/utils/: Formatting.hpp
src/: Application.cpp  main.cpp
src/game/: BlockData.cpp  Chunk.cpp  ChunkManager.cpp  Player.cpp  Settings.cpp  World.cpp
src/render/core/: Camera.cpp  GUIRenderer.cpp  GameOverlay.cpp  ViewFrustum.cpp
src/render/gl/: GLChunkRenderer.cpp  GLShader.cpp  GLShadowMap.cpp  GLSplatRenderer.cpp  GLTexture.cpp  GLTextureUtils.cpp  GLWorldRenderer.cpp
training/: sanity_loader.py  train.py  train_new.py
